deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enterprise-horizontal-ppc
  namespace: prod
  labels:
    app: enterprise-horizontal-ppc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enterprise-horizontal-ppc
  template:
    metadata:
      labels:
        app: enterprise-horizontal-ppc
    spec:
      containers:
        - name: enterprise-horizontal-ppc
          image: europe-west1-docker.pkg.dev/appointy-global/appointy9/enterprise-horizontal-ppc:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
