deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-horizontal-ppc
  namespace: prod
  labels:
    app: enterprise-horizontal-ppc
spec:
  type: ClusterIP
  selector:
    app: enterprise-horizontal-ppc
  ports:
    - name: http
      port: 80
      targetPort: 8080
