deployment/ingress-enterprise-horizontal-ppc-v43.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enterprise-horizontal-ppc-v43
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: ingress-nginx-v43
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - www.appointy.com
    secretName: appointy-wildcard-ssl-2026
  rules:
  - host: www.appointy.com
    http:
      paths:
      - path: /enterprise-horizontal-ppc(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: enterprise-horizontal-ppc
            port:
              number: 80
